[gd_scene load_steps=6 format=3 uid="uid://jvkpatuduhds"]

[ext_resource type="Script" path="res://UI/game_over_screen.gd" id="1_fjmyb"]
[ext_resource type="LabelSettings" uid="uid://bye8dphwcw4ek" path="res://UI/hud_labels_settings.tres" id="2_vbss7"]
[ext_resource type="AudioStream" uid="uid://bevcvyw5isd60" path="res://UI/fanfare_win.wav" id="3_2aj8b"]
[ext_resource type="AudioStream" uid="uid://eflnrjkahbgc" path="res://UI/fanfare_lose.wav" id="4_xbk0d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e6noe"]
bg_color = Color(0, 0, 0, 0.25098)

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fjmyb")

[node name="BG" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_e6noe")

[node name="GameOverText" type="Label" parent="BG"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 200.0
offset_right = 20.0
offset_bottom = 223.0
grow_horizontal = 2
text = "You lose..."
label_settings = ExtResource("2_vbss7")
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="BG"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.5
offset_top = -33.0
offset_right = 57.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="RestartButton" type="Button" parent="BG/VBoxContainer"]
layout_mode = 2
text = "Restart game
"

[node name="MenuButton" type="Button" parent="BG/VBoxContainer"]
layout_mode = 2
text = "Back to menu"

[node name="WinFanfare" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_2aj8b")
playback_type = 1

[node name="LoseFanfare" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_xbk0d")
playback_type = 1

[connection signal="pressed" from="BG/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="BG/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
